plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.5'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.diffplug.spotless' version '7.0.4'
    id 'jacoco'
    id 'org.barfuin.gradle.jacocolog' version '3.1.0'
}

group = 'com.project'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

ext['flyway.version'] = '10.15.0'

base {
    archivesName = 'speedBack'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

ext {
    lombokVersion = '1.18.38'
    springdocVersion = '2.5.0'
    modelmapperVersion = '3.2.5'
    togglzVersion = '4.0.0'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-database-postgresql'
    runtimeOnly 'org.postgresql:postgresql'

    compileOnly "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
    testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
    testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"

    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${springdocVersion}"
    implementation "org.modelmapper:modelmapper:${modelmapperVersion}"
    implementation "org.togglz:togglz-spring-boot-starter:${togglzVersion}"
    implementation "org.togglz:togglz-console:${togglzVersion}"
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()

    testLogging {
        events 'failed', 'skipped'
        exceptionFormat 'full'
        showCauses true
        showExceptions true
        showStackTraces true
    }

    afterTest { descriptor, result ->
        def status = switch (result.resultType) {
            case org.gradle.api.tasks.testing.TestResult.ResultType.SUCCESS -> 'PASSED'
            case org.gradle.api.tasks.testing.TestResult.ResultType.FAILURE -> 'FAILED'
            case org.gradle.api.tasks.testing.TestResult.ResultType.SKIPPED -> 'SKIPPED'
        }
        println("${descriptor.className} > ${descriptor.name} - ${status}")
    }

    afterSuite { desc, result ->
        if (!desc.parent) {
            logger.lifecycle(
                    "Test summary: ${result.testCount} run, ${result.successfulTestCount} passed, ${result.failedTestCount} failed, ${result.skippedTestCount} skipped"
            )
        }
    }

    finalizedBy(tasks.named('jacocoTestReport'))
}

jacoco {
    toolVersion = '0.8.13'
}

tasks.named('jacocoTestReport') {
    dependsOn(tasks.named('test'))
    classDirectories.setFrom(files(classDirectories.files.collect {
        fileTree(dir: it, exclude: [
                '**/dto/**',
                '**/entity/**',
                '**/config/**',
                '**/*Application.class'
        ])
    }))
    reports {
        xml.required = false
        html.required = true
        csv.required = false
    }
}

tasks.named('jacocoTestCoverageVerification') {
    dependsOn(tasks.named('test'))
    classDirectories.setFrom(files(classDirectories.files.collect {
        fileTree(dir: it, exclude: [
                '**/config/**',
                '**/dto/**',
                '**/entity/**',
                '**/repository/**',
                '**/toggles/**',
                '**/*Application.class'
        ])
    }))
    violationRules {
        rule {
            enabled = true
            element = 'CLASS'
            limit {
                counter = 'LINE'
                value = 'COVEREDRATIO'
                minimum = 0.80
            }
        }
    }
    finalizedBy(tasks.named('jacocoLogTestCoverage'))
}

tasks.named('check') {
    dependsOn tasks.named('spotlessCheck')
    dependsOn tasks.named('jacocoTestCoverageVerification')
}

spotless {
    java {
        googleJavaFormat('1.27.0').style('GOOGLE').reflowLongStrings()
        removeUnusedImports()
        trimTrailingWhitespace()
        endWithNewline()
    }
}
